@@ -1,5 +1,9 @@
 Revision history for Perl extension Shlomif::NavMenu.
 
+    - Changed the 'license' in Build.PL from "bsd" to the more accurate
+    "mit".
+    - Added keywords and links to the META.yml.
+
 1.0300    Sun Jun 14 13:57:09 IDT 2009
     - Refactoring: Made HTML::Widgets::NavMenu::Object a sub-class of 
     Class::Accessor to remove many "use base" calls to it.
